# sample-service

./: Dockerfile  load.py  pyproject.toml
sample_app/: app.py
