[project]
name = "sample-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Yogesh Sharma",email = "yogesh_sharma2@intuit.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "prometheus-client (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
